# card-abstractinator-9000

./: .gitignore  Cargo.toml  devshell.nix  flake.nix  formatter.nix  formatter.nix.fake  rust-toolchain.toml  treefmt.nix
.github/workflows/: github-actions-demo.yml.disable  nix-ci-cd-pipeline.yml
nix/: devshell.nix  formatter.nix
src/: main.rs  mesh2d_arcs.rs  mesh2d_manual.rs  pixel_grid_snap.rs  wireframe_2d.rs
