[package]
name = "card-abstractinator-9000"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
# bevy said this disable logs. Could improve performance when compiling
#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

#SETTINGS
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
